style: css styling

--- a/lib/thoughts_chirp_web/live/post_live/post_component.html.heex
+++ b/lib/thoughts_chirp_web/live/post_live/post_component.html.heex
@@ -1,4 +1,4 @@
-<div class="post">
+<div class="post " style="border: solid thin #F0F0F0; margin-bottom: 1px;">
   <div class="row">
     <div class="column column-10">
       <div class="post-avatar"></div>
